force-app/main/default/objects/QCC_Hotword_Queue_Routing__c/QCC_Hotword_Queue_Routing__c.object-meta.xml
<CustomObject>
    <description>QCC Hot word Queue Routings</description>
    <label>QCC Hotword Queue Routing</label>
    <nameField>
        <displayFormat>QCC-{000}</displayFormat>
        <label>QCC Hotword Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QCC Hotword Queue Routings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>