force-app/main/default/objects/QCC_Hotword_Queue_Routing__c/fields/freight_Type__c.field-meta.xml
<CustomField>
    <fullName>freight_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot Word</fullName>
            </value>
            <value>
                <fullName>Mail Address</fullName>
            </value>
            <value>
                <fullName>Mail Suffix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>