force-app/main/default/objects/QCC_Hotword_Queue_Routing__c/fields/Hot_words__c.field-meta.xml
<CustomField>
    <fullName>Hot_words__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hot words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>