force-app/main/default/objects/QCC_Hotword_Queue_Routing__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <label>Queue Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCC_R1_Advocacy_Q</fullName>
            </value>
            <value>
                <fullName>CCC_R1_Critical_Q</fullName>
            </value>
            <value>
                <fullName>CCC_R1_Emirates_Q</fullName>
            </value>
            <value>
                <fullName>EU_Compensation_Queue_High</fullName>
            </value>
            <value>
                <fullName>ExCo_Queue_High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>