force-app/main/default/objects/QCC_Hotword_Queue_Routing__c/recordTypes/Customer_Connect.recordType-meta.xml
<RecordType>
    <fullName>Customer_Connect</fullName>
    <active>true</active>
    <description>Customer connect record type</description>
    <label>Customer Connect</label>
</RecordType>