force-app/main/default/objects/QCC_Hotword_Queue_Routing__c/recordTypes/Qantas_Freight.recordType-meta.xml
<RecordType>
    <fullName>Qantas_Freight</fullName>
    <active>true</active>
    <label>Qantas Freight</label>
</RecordType>