force-app/main/default/objects/QCC_Hotword_Queue_Routing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hot_words__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>freight_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>